Fixed thumbnail overflow

--- a/src/components/ThumbnailItem/index.css
+++ b/src/components/ThumbnailItem/index.css
@@ -1,16 +1,21 @@
 .thumbnail {
     opacity: .5;
     cursor: pointer;
+    border-radius: 10px;
+    overflow: hidden;
     transition: all .2s ease-out;
-    border: none;
-    outline: none;
 }
 .thumbnail img {
-    width: 65px;
+    width: 100%;
 }
 .opacity {
     opacity: 1;
 }
 .thumbnail:hover {
     transform: translateY(-8px);
+}
+button {
+    border: none;
+    outline: none;
+    border-radius: 15px;
 }
